[tool.poetry]
name = "ruvsarpur"
version = "7.0.2"
description = "Python script to download shows off the Icelandic RÚV website."
authors = [
    "Sverrir Sigmundarson <info@sverris.com>",
    "Haukur Páll Jónsson <haukurpalljonsson@gmail.com>",
]
license = "MIT License"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.7"
termcolor = "^1.1.0"
python-dateutil = "^2.8.2"
requests = "^2.26.0"
simplejson = "^3.17.6"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pylint = "^2.12.2"
black = "^21.12b0"
mypy = "^0.930"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
