[tool.poetry]
name = "ruvsarpur"
version = "8.0.0"
description = "Python script to download shows off the Icelandic RÚV website."
authors = [
    "Haukur Páll Jónsson <haukurpalljonsson@gmail.com>",
    "Sverrir Sigmundarson <info@sverris.com>",
]
license = "MIT License"
packages = [{ include = "ruvsarpur", from = "src" }]
readme = "README.md"
repository = "https://github.com/HaukurPall/ruvsarpur"
[tool.poetry.scripts]
ruvsarpur = "ruvsarpur.cli:main"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.7"
m3u8 = "^0.9.0"
gql = { extras = ["all"], version = "^3.0.0rc0", allow-prereleases = true }
click = "^8.0.3"
tabulate = "^0.8.9"
ffpb = "^0.4.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pylint = "^2.12.2"
black = "^21.12b0"
mypy = "^0.930"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
